syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.seariver.kanbanboard.grpc";

package org.seariver.kanbanboard.grpc;

import "google/protobuf/empty.proto";

service KanbanboardService {
  rpc createBucket (BucketGrpc) returns (google.protobuf.Empty) {}
  rpc findAllBuckets (google.protobuf.Empty) returns (BucketResultSet) {}
}

message BucketGrpc {
  string bucket_id = 1;
  double position = 2;
  string name = 3;
}

message BucketResultSet {
  repeated BucketGrpc buckets = 1;
}
